upgrade to java 11, refactor dependencies