@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.3.4</version>
+        <version>2.1.2.RELEASE</version>
         <relativePath /> <!-- lookup parent from repository -->
     </parent>
     <groupId>skn.springframework</groupId>
@@ -14,19 +14,16 @@
     <name>my-petclinic</name>
     <description>my-petclinic</description>
     <url />
-    <licenses>
-        <license />
-    </licenses>
-    <developers>
-        <developer />
-    </developers>
+    
     <modules>
         <module>my-petclinic-data</module>
         <module>my-petclinic-web</module>
     </modules>
 
     <properties>
-        <java.version>17</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
     </properties>
 
     <build>
@@ -40,11 +37,24 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration><goals>install</goals></configuration>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
 
     <scm>
-        <developerConnection>scm:git:https://github.com/nightsaken/my-petclinic.git</developerConnection>
+        <developerConnection>scm:git:https://github.com/skn332/my-petclinic.git</developerConnection>
       <tag>HEAD</tag>
   </scm>
 
